# langchain_surf

./: .copier-answers.yml  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE  README.dev.md  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build.yml  next_steps_citation_issue.md  next_steps_linting_issue.md  next_steps_online_documentation_issue.md  next_steps_sonarcloud_issue.md  next_steps_zenodo_issue.md
apptainer/: pyproject.toml  uv_bare
docs/: Makefile  conf.py  index.rst  make.bat
docs/examples/: chat_willma.py  deep_agents_example.py  deep_agents_mcp.py  execute_python_script.py  hpc_func.py  hpc_func_ai4science.py  hpc_func_decorator.py  tool.py
docs/examples/mcp/: client.py  client_noasync.py  math_server.py  tu_find.py
src/langchain_surf/: __init__.py
src/langchain_surf/chat_models/: chat_willma.py
src/langchain_surf/tools/: hpc_tools.py
src/langchain_surf/tools/tools/: simple.py  structured.py
src/langchain_surf/tools/utils/: hpc_func.py  object_store_connector.py  object_store_connector_cli.py  slurm_connector.py
src/langchain_surf/ui/: chain.py  message.py  stream.py
ui/: app.py  app_deepagent.py
