# see documentation, e.g.
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://www.python.org/dev/peps/pep-0621/

[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Nicolas Renaud", 
      email = "nicolas.renaud@surf.nl" 
    }
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    'langchain_surf@git+https://github.com/SURF-Research-Agents/langchain_surf.git',
]
description = "Connect LangChain with SURF services"
keywords = ["LLM"," AI Agents"," High Performance Computing"]
license = {file = "LICENSE"}
name = "surf_research_agent_client"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = "==3.13.5"
version = "0.1.0"

